# llmlabs

./: example1.txt  example2.txt  example3.txt  formatoptmizer.py  instroptmizer.py  loopback.py  main.py  optimize-prob1.txt  policymaker.txt  prob1.txt  prob2.txt  prob3.txt  pyproject.toml  rpg.py
